# epkg

./: .gitignore  COPYRIGHT  ChangeLog  ChangeLog-1.0.x  ChangeLog-2.0.x  ChangeLog-2.1.x  ChangeLog-2.2.x  Makefile.in  NEWS  README  TODO  config  config.h.in  configure  configure.ac  postinstall
autom4te.cache/: output.0  requests  traces.0
common/: archive.c  archive.h  compression.c  compression.h  download.c  download.h  init.c  init.h
compat/: ChangeLog  compat.h
doc/: Makefile.in  encap2.0-specification.txt  encap2.1-specification.txt  encap_check_prereqs.3  encap_check_target.3  encap_find_versions.3  encap_install.3  encap_open.3  encap_pkgspec_parse.3  encap_platform_name.3  encap_profile.5  encap_profile.dtd  encap_vercmp.3  encapinfo_write.3  epkg.1  mkencap.1
epkg/: Makefile.in  batch.c  check.c  clean.c  epkg.c  epkg.h  install.c  log.c  output.c  remove.c  update.c  updatedir.c  versions.c
lib/: Makefile.in  check_pkg.c  clean_target.c  encap.h  encapinfo.c  handle.c  install_pkg.c  internal.h  linkinfo.c  package.c  pkgspec.c  platform.c  prereq.c  printplatform.c  recursion.c  remove_pkg.c  util.c  vercmp.c  version.c
listhash/: TODO
mkencap/: Makefile.in  addfiles.c  build.c  environment.c  mkencap.c  mkencap.h  mkencap.m4  mkencap_environment.in  profile_elements.c  profile_parse.c  writeinfo.c
pathcode/: ChangeLog  TODO  cleanpath.c.in  gsub.c.in  mkdirhier.c.in  module.ac  pathcode.h.in  relativepath.c.in  rmtree.c.in
